# pp6Calculator

./: CMakeLists.txt  README.md
src/: pp6Calculator.cpp  pp6Calculator.h
src/pp6Days/: dayFourFuncs.cpp  dayFourFuncs.h  dayOneFuncs.cpp  dayOneFuncs.h  dayThreeFuncs.cpp  dayThreeFuncs.h  dayTwoFuncs.cpp  dayTwoFuncs.h
src/pp6Utils/: FileReader.cpp  FileReader.hpp  MyFileReader.cpp  MyFileReader.hpp  Particle.hpp  ParticleInfo.cpp  ParticleInfo.hpp  Vector3.hpp  Vector4.cpp  Vector4.hpp  myMap.hpp  myMath.hpp
